# qt_QQ

./: .clang-format  .gitignore  CMakeLists.txt  README.md  log.txt  main.cpp  yuri.txt
.codemap/: application-shell.json  main-panel.json
hpp/: chat.hpp  msg_info.hpp  pushbutton.hpp  splitter.hpp  test.hpp  toolbutton.hpp  tools.hpp
include/: mainwindow.h
qrc/: init.qrc
qrc/qss/: left_wid.qss  main_wid.qss  mainwindow.qss
src/: mainwindow.cpp
ui/: chat.ui  mainwindow.ui  msg_info.ui  msg_list.ui  send.ui
